--- a/css/style.css
+++ b/css/style.css
@@ -14,6 +14,9 @@
 .hero{
     background-color: grey;
     height: 30vh;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 .footer{
     background-color: black;
@@ -54,4 +57,9 @@
     justify-content: center;
     align-items: center;
     height: 69px;
+}
+
+footer{
+    background-color: black;
+    height: 20vh;
 }
