carrito en compra

--- a/css/style.css
+++ b/css/style.css
@@ -79,10 +79,32 @@ body{
 }
 .carrito-pag-compra{
     display: flex;
-    justify-content: center;
+    justify-content:center;
     color: white;
     margin-left: 25%;
     margin-right: 25%;
+    border: #000000 solid 1px;
+    border-radius: 20px;
+    background-color: rgba(255, 255, 255, 0.767);
+    
+    max-height: 350px; 
+    overflow-y: auto; 
+}
+
+.carritoListo{
+    color: #000000;
+    font-size: 20px;
+    
+}
+#scrollbar-compra::-webkit-scrollbar {
+    width: 7px;
+    
+}
+
+#scrollbar-compra::-webkit-scrollbar-thumb {
+    background-color: #888;
+    border-radius: 6px;
+    height: 5px;
 }
 
 /**-------------------TARJETAS PRODUCTOS----------*/
