--- a/css/style.css
+++ b/css/style.css
@@ -44,11 +44,27 @@ body{
 
 /*!---------------------MAIN----------------------------*/
 .hero{
-    background-color:transparent;
-    height: 30vh;
+    background-color: #00000094;
+    border: solid white 1px;
+    border-radius: 15px;
+    margin-left: 50vh;
+    margin-right: 50vh;
+}
+.hero h2{    
+    height: 15vh;
+    display: flex;
+    justify-content: center;
+    align-items: end;
+    color: white;
+}
+.hero p{
+    color: white;
+    font-size: larger;
+    height: 20vh;
     display: flex;
     align-items: center;
-    justify-content: center;
+    justify-content:center;
+    text-align: center;
 }
 .sectionmain{
     height: 70vh;
@@ -57,6 +73,35 @@ body{
     align-items: center;
     flex-wrap: nowrap;
 }
+.usuarioLogin{
+    height: 50vh;
+    width: 350px;
+    margin: 10% auto;
+    padding: 20px;
+    border: #000000 solid 1px;
+    border-radius: 10px;
+    background-color: rgba(255, 255, 255, 0.658);
+}
+.usuarioLogin div{
+    height: 33%;
+}
+#usuario label, #contraseña label{
+    color: white;
+    font-size: 23px;
+    border-radius: 10px;
+    background-color: rgba(0, 0, 0, 0.863);
+    display: flex;
+    justify-content: center;
+    margin:10px 25% 20px 25%;
+}
+#usuario input,#contraseña input {
+    display: flex;
+    width: 70%;
+    margin-left: 15%;
+    margin-right: 15%;    
+}
+
+
 /**-------------------Boostrapdropdown------------------*/
 .boostrapdropdown{
     display: flex;
@@ -70,6 +115,7 @@ body{
 }
 
 /**-------------------Pagina compra-------*/
+
 .boton-compra{
     width: 140px;
     height: 40px;
